<resources>
    <string name="app_name">GOH</string>
    <string name="we_sent_you_a_code_to_verify_your_number">We sent you a code to \n verify your number</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the\n printing and typesetting industry.</string>
    <string name="explore">Explore</string>
    <string name="activities">Activities</string>
    <string name="chat">Chat</string>
    <string name="accounts">Accounts</string>
    <string name="google_maps_key">AIzaSyDmLPgQEzhJYqYr1EGRRApuVhkUZ560D5Y</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sajol_ahmed">\u0040sajol__ahmed</string>
    <string name="about">It is a long established fact that a reader will be distracted by the readable. More</string>
    <string name="edit_profile">Edit profile</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="RadioButton1">"Service was not good"</string>
    <string name="radioButton2">Seller’s behavior was rude</string>
    <string name="radioButton3">I have to wait a lot</string>
    <string name="radioButton4">I can’t track my order</string>
    <string name="radioButton5">Others</string>
    <string name="service_was_not_good">Service was not good</string>
    <string name="add_duration_in_days"><b><font fgcolor='#101E16'>Add Duration</font></b> (in days)</string>
    <string name="start_amp_end_time"><![CDATA[Start & end time]]></string>
    <string name="enter_your_email">Enter your e-mail or number</string>
    <string name="your_password">Enter your password</string>
    <string name="name">Enter your valid name</string>
    <string name="mobile">Enter your mobile number</string>
    <string name="password_match">Password not same</string>
    <string name="password_sort">Password is short</string>
    <string name="select_departure_date">Select date of birth</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="type_about">Type about</string>
    <string name="optional">(Optional)</string>
    <string name="about_title">About</string>
    <string name="interests">Interests</string>
    <string name="add_day_amp_time"><![CDATA[Add Day & Time]]></string>
    <string name="activity_name">Enter Activity Name</string>
    <string name="select_your_location">Select your location</string>
    <string name="search">Search Location</string>
    <string name="location">Location</string>
    <string name="continue_s">Confirm Location</string>
    <string name="report_issue">Please write report issue</string>
    <string name="view_all">View all</string>
    <string name="near_by_activities">Near by activities</string>
    <string name="categories">Categories</string>
    <string name="ask_to_join">Ask to Join</string>
    <string name="any">Any</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="change_password">Change Password</string>
    <string name="sub_heder_change_password"><![CDATA[Enter your new password & confirm it]]></string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="confirm">Confirm</string>
    <string name="create_activity">Create activity</string>
    <string name="add_photo">Add Photo</string>
    <string name="next">Next</string>
    <string name="activity_name_heder">Activity Name</string>
    <string name="type_a_name">Type a name</string>
    <string name="write_of_description">Write of description</string>
    <string name="description_of_activity">Description of activity</string>
    <string name="minimum_participate">Minimum participate</string>
    <string name="add_location">Add Location</string>
    <string name="add_categories">Add Categories</string>
    <string name="gender">Gender</string>
    <string name="prefared_age_range">Prefared age range</string>
    <string name="review_activity">Review activity</string>
    <string name="edit">Edit</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="social_link">Social link</string>
    <string name="reset">Reset</string>
    <string name="filter">Filters</string>
    <string name="city_area">City/Area</string>
    <string name="date_of_activities">Date of activities</string>
    <string name="result">Result</string>
    <string name="filter_result">Filter Result</string>
    <string name="did_t_get_it">Did’t get it?</string>
    <string name="send_a_new_code">Send a new code</string>
    <string name="verify">Verify</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="add_friend">Add Friend</string>
    <string name="share">Share</string>
    <string name="about_head">About</string>
    <string name="details">Details</string>
    <string name="joined">Joined</string>
    <string name="country">Country</string>
    <string name="organized">Organized</string>
    <string name="participated">Participated</string>
    <string name="interest">Interest</string>
    <string name="my_friends">My Friends</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="welcome_to">Welcome to,</string>
    <string name="goh">Goh</string>
    <string name="login_with_phone_or_email">Login with Phone or Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="notification">Notification</string>
    <string name="host_by">Host by -</string>
    <string name="request">Request</string>
    <string name="promote_activity">Promote activity</string>
    <string name="cancel_activity">Cancel Activity</string>
    <string name="let_us_know_you">Let us know you</string>
    <string name="select_gender">Select Gender</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="tax_included">(Tax included)</string>
    <string name="total">Total</string>
    <string name="your_post_will_be_promoted_to_all_users_in_the_designated_area_matching_the_activity_requirments">Your post will be promoted to all users in the designated area matching the activity requirments</string>
    <string name="rating">Rating</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="select_an_issue">Select an issue</string>
    <string name="track_previous_issues">Track previous issues</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_new_password_amp_confirm_it"><![CDATA[Enter your new password & confirm it]]></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name_hint">Name</string>
    <string name="i_have_accepted">I have accepted</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="basic_terms">Basic Terms</string>
    <string name="agreement">Agreement</string>
    <string name="account">Account</string>
    <string name="relationship">Relationship</string>
    <string name="track_issue">Track Issue</string>
    <string name="done">Done</string>
    <string name="update_activity">Update activity</string>
    <string name="view_participants">View participants</string>
    <string name="add_day">Add Day</string>
    <string name="select_your_date">Select your date</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="friends">Friends</string>
    <string name="language">Language</string>
    <string name="password_change">Password Change</string>
    <string name="accept">Accept</string>
    <string name="join_request">Join request</string>
    <string name="pending">Pending</string>
    <string name="add_a_physical_location_for_people_to_n_join_your_activity">Add a physical location for people to\n join your activity</string>
</resources>