<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.reportIssue.ReportIssueActivity"
    android:padding="@dimen/_15sdp">

    <ImageView
        android:id="@+id/ivReportIssue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvReportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_an_issue"
        android:fontFamily="@font/axiforma_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llIssueList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvReportTitle"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_25sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_an_issue"
            android:fontFamily="@font/axiforma_semi_bold"
            android:textColor="@color/black"
            />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvIssueLis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etIssueWrite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@drawable/green_line_grey"
        android:hint="@string/write_of_description"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@+id/llIssueList"
        android:gravity="top"
        android:layout_marginTop="@dimen/_10sdp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvIssueSubmit"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_25sdp"
        android:background="@drawable/curved_send_sms_shape_green"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="@dimen/_8ssp"
        android:layout_margin="@dimen/_7sdp"
        android:fontFamily="@font/axiforma_semi_bold"
        app:layout_constraintEnd_toEndOf="@+id/etIssueWrite"
        app:layout_constraintBottom_toBottomOf="@id/etIssueWrite"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llPreviousIssueList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/etIssueWrite">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_square"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/track_previous_issues"
            android:fontFamily="@font/axiforma_medium"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_5sdp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>