<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:padding="@dimen/_15sdp"
    android:orientation="vertical"
    android:background="@drawable/curved_shape_white">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDialogName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_title"
        android:textSize="@dimen/_12ssp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/axiforma_bold"
        android:textColor="@color/black"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDialogData"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:paddingStart="@dimen/_10sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/axiforma_semi_bold"
        android:background="@drawable/grey_line_border"
        android:layout_marginTop="@dimen/_10sdp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:weightSum="2"
        android:layout_marginTop="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDialogUpdate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/update"
            android:fontFamily="@font/axiforma_semi_bold"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/curved_shape_btn_back_green"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDialogCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:fontFamily="@font/axiforma_semi_bold"
            android:textColor="@color/black"
            android:background="@drawable/curved_shape_btn_back_grey"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>