<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/bottom_sheet_top_curb">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/vLineHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_view_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center_horizontal"/>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interests"
                android:textColor="@color/text_head_color"
                android:textSize="@dimen/_11ssp"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/axiforma_semi_bold"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/optional"
                android:layout_marginStart="@dimen/_6sdp"
                android:textSize="@dimen/_10ssp"
                android:textColor="#C0D0C6"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/axiforma_semi_bold"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvInterestUpdate"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvUpdate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_margin="@dimen/_15sdp"
            android:text="@string/update"
            android:gravity="center"
            android:fontFamily="@font/axiforma_semi_bold"
            android:textColor="@color/white"
            android:background="@drawable/curved_shape_btn_back_green"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>