<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.promotion.PromoteActivity"
    android:padding="@dimen/_15sdp"
    android:background="#F9F9F9">

    <ImageView
        android:id="@+id/ivPromoteBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/ivPromote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/promote_activity"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/axiforma_semi_bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ivPromote"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/curved_shape_white"
        android:layout_marginTop="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAddDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_duration_in_days"
            android:fontFamily="@font/axiforma_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/_5sdp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llDetailsPromote"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvAddDuration"
            android:layout_marginTop="@dimen/_6sdp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/tvDaysCount"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/curved_shape_black"
                android:text="1"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:gravity="center"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPlus"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/curved_shape_grey"
                android:text="+"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/_18ssp"
                android:layout_marginStart="@dimen/_10sdp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMinus"
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_30sdp"
                android:background="@drawable/curved_shape_grey"
                android:text="-"
                android:layout_marginStart="@dimen/_5sdp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="@dimen/_22ssp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPayment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payable_amount"
            android:fontFamily="@font/axiforma_semi_bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDetailsPromote"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/black" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTaxInclude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_included"
            android:fontFamily="@font/axiforma_regular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDetailsPromote"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/grey"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvPayment"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/total"
            android:fontFamily="@font/axiforma_medium"
            android:layout_marginTop="@dimen/_10sdp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SR 283"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/axiforma_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPayment"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_post_will_be_promoted_to_all_users_in_the_designated_area_matching_the_activity_requirments"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalAmount"
            android:layout_marginTop="@dimen/_10sdp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvResultData"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:text="Payment (SR 283)"
        android:gravity="center"
        android:fontFamily="@font/axiforma_semi_bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/curved_shape_btn_back_green"/>
</androidx.constraintlayout.widget.ConstraintLayout>