<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trackIssue.TrackIssueActivity"
    android:padding="@dimen/_15sdp">

    <ImageView
        android:id="@+id/ivTermsBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrivecyPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_amp_conditions"
        android:fontFamily="@font/axiforma_semi_bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPrivecyPolicy">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTrackHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_terms"
            android:fontFamily="@font/axiforma_semi_bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrivecyPolicy"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTrackDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/axiforma_regular"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackHead"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_7sdp"
            android:textColor="#7A7A7A"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.
Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:fontFamily="@font/axiforma_semi_bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrivecyPolicy"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/axiforma_regular"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackHead"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_7sdp"
            android:textColor="#7A7A7A"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's "/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:fontFamily="@font/axiforma_semi_bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrivecyPolicy"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/axiforma_regular"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackHead"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_7sdp"
            android:textColor="#7A7A7A"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.
Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relationship"
            android:fontFamily="@font/axiforma_semi_bold"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_15sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPrivecyPolicy"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/axiforma_regular"
            app:layout_constraintTop_toBottomOf="@+id/tvTrackHead"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/_7sdp"
            android:textColor="#7A7A7A"
            android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry.
Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled"/>

    </androidx.appcompat.widget.LinearLayoutCompat>



</androidx.constraintlayout.widget.ConstraintLayout>