<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_margin="@dimen/_15sdp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llMale"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/curved_shape_btn_back_green">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_man"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvMaleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:fontFamily="@font/axiforma_medium"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_10sdp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/llFemale"
            android:layout_width="0dp"
            android:layout_height="@dimen/_100sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/_15sdp"
            android:background="@drawable/curved_shape_btn_back_white">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_woman"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:fontFamily="@font/axiforma_medium"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_10sdp"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDialogUpdate"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_35sdp"
        android:gravity="center"
        android:text="@string/done"
        android:fontFamily="@font/axiforma_semi_bold"
        android:textColor="@color/white"
        android:background="@drawable/curved_shape_btn_back_green"/>
</androidx.appcompat.widget.LinearLayoutCompat>